tests/NormalTests/paczka1/small_fuzzy/57921659.err
Error in line 2: 969ndLM4Q S626 79,5
Error in line 1: sSl S949 96,0
Error in line 9: sSl A24 5,7
